--- a/EXP1.html
+++ b/EXP1.html
@@ -4,8 +4,16 @@
     <meta name="viewport" content="width=device-width">
     <head>
         <title>Registration Form</title>
+        <style>
+            #container{
+                position: relative;
+                right: 50%;
+                left: 50%;
+            }
+        </style>
     </head>
     <body>
+        <div id="container">
         <h1 style="text-align: center;">Registration form</h1>
         <form>
             <label for="userid">Userid:</label>
@@ -46,7 +54,8 @@
         <label for="about">about</label>
         <textarea id="about" placeholder="optional"></textarea>
         <br>
-        <button style="position:relative;margin:0%;left: 50%; right: 50%;">Submit</button>
+        <button>Submit</button>
         </form>
+    </div>
     </body>
 </html>
