--- a/formvalidation.html
+++ b/formvalidation.html
@@ -11,22 +11,24 @@
                 left: 50%;
             }
         </style>
+    <script src="form.js"></script>    
     </head>
     <body>
+        
         <div id="container">
-        <h1 style="text-align: center;">Registration form</h1>
+        <h1>Registration form</h1>
         <form name="rform" onsubmit="validate()">
             <label for="userid">Userid:</label>
-            <input type="text" id="userid"  placeholder="Required and must be of length 5 to 12" >
+            <input type="text" id="userid" placeholder="Required and must be of length 5 to 12">
             <br>
             <label for="password">Password:</label>
-            <input type="password" id="password"  placeholder="Required and must be of length 5 to 12" minlength="5" maxlength="12">
+            <input type="password" id="password" required placeholder="Required and must be of length 5 to 12" minlength="5" maxlength="12">
             <br>
             <label for="Name">Name:</label>
-            <input type="text" id="Name"  placeholder="Required and alphabets only" >
+            <input type="text" id="Name" required placeholder="Required and alphabets only" >
             <br>
             <label for="address">Address:</label>
-            <input type="text" placeholder="Optional" id="address">
+            <input type="text" placeholder="Optional">
             <br>
             <label for="Country">Country</label>
             <select required>Please select a country
